--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,24 @@
           comfortably at an affordable price.
         </p>
       </section>
+      <section class="categories">
+        <a href="/product-listing/index.html?category=tents" class="category">
+          <img alt="Tent Icon from Noun Project: Mustofa Bayu" src="/images/noun_Tent_3544767.svg">
+          <span>Tents</span>
+        </a>
+        <a href="/product-listing/index.html?category=backpacks" class="category">
+          <img alt="Sleeping Bag Icon from Noun Project: Mustofa Bayu" src="/images/noun_Sleeping_Bag_3544775.svg">
+          <span>Backpacks</span>
+        </a>
+        <a href="/product-listing/index.html?category=sleeping-bags" class="category">
+          <img alt="Backpack Icon from Noun Project: Mustofa Bayu" src="/images/noun_carrier_bag_3544771.svg">
+          <span>Sleeping Bags</span>
+        </a>
+        <a href="/product-listing/index.html?category=hammocks" class="category">
+          <img alt="Hammock Icon from Noun Project: Paul Richard" src="/images/noun_Hammock_791143.svg">
+          <span>Hammocks</span>
+        </a>
+      </section>
       <section class="products">
         <h2>Top Products</h2>
         <ul class="product-list"></ul>
