Add discount to product detail pages

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -45,6 +45,7 @@
         <h3></h3>
         <h2 class="divider"></h2>
         <img class="divider" src="#" alt="" />
+        <p class="product-card__price-before"></p>
         <p class="product-card__price"></p>
         <p class="product__color"></p>
         <p class="product__description"></p>
